testdata/baselines/reference/submodule/conformance/jsdocParseBackquotedParamName.errors.txt
a.js(2,4): error TS8009: The '?' modifier can only be used in TypeScript files.
a.js(2,12): error TS8010: Type annotations can only be used in TypeScript files.
a.js(3,20): error TS8010: Type annotations can only be used in TypeScript files.
a.js(5,18): error TS1016: A required parameter cannot follow an optional parameter.


==== a.js (4 errors) ====
    /**
     * @param {string=} `args`
       ~~~~~~~~~~~~~~~~~~~~~~~
               ~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     * @param `bwarg` {?number?}
    ~~~
!!! error TS8009: The '?' modifier can only be used in TypeScript files.
                       ~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    function f(args, bwarg) {
                     ~~~~~
!!! error TS1016: A required parameter cannot follow an optional parameter.
    }
    
==== ts.ts (0 errors) ====
    /**
     * @param `arg` - this is fine
     */
    function g(arg: string) {
    }
    